--- a/templates/resume_base.html
+++ b/templates/resume_base.html
@@ -74,10 +74,11 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'dashboard' %}">
-          <i class="bi bi-file-earmark-text"></i><span>Resumes</span>
-        </a>
-      </li>
+  <a class="nav-link collapsed" href="{% url 'resume_list' %}">
+    <i class="bi bi-file-earmark-text"></i><span>Resumes</span>
+  </a>
+</li>
+
       <li class="nav-item">
         <a class="nav-link collapsed" href="{% url 'dashboard' %}">
           <i class="bi bi-paperclip"></i><span>Applications</span>
