--- a/templates/resume_builder/resume/list.html
+++ b/templates/resume_builder/resume/list.html
@@ -18,7 +18,7 @@
         <strong>{{ resume.title }}</strong><br>
         <a href="{% url 'resume_detail' resume.pk %}">View</a> |
         <a href="{% url 'resume_select_template' resume.pk %}">Select Template</a> |
-        <a href="{% url 'resume_download' resume.pk %}">Download PDF</a>
+        <a href="{% url 'resume_download' resume.pk %}" class="btn btn-warning">Download PDF</a>
       </li>
     {% empty %}
       <li class="list-group-item text-muted">No resumes found.</li>
